# server/internal/services/deploy/types/dsl_types.go
@@ -17,8 +17,8 @@ const (
 )
 
 type Command struct {
-	Action      CommandType // e.g., "START", "KILL", "SCALE"
-	ServiceSlug string      // The User Svc slug of the service affected
-	NodeUrl     *string     // Node address, e.g., "https://api.com:999"
-	InstanceId  *string     // Instance id, e.g., "https://api.com:999/user-svc"
+	Action       CommandType // e.g., "START", "KILL", "SCALE"
+	NodeUrl      *string     // Node address, e.g., "https://api.com:999"
+	DeploymentId string
+	InstanceId   *string // Instance id, e.g., "https://api.com:999/user-svc"
 }
