# server/internal/services/registry/types/service_definition_types.go
@@ -8,17 +8,31 @@
 
 package registry_svc
 
+// ServiceDefinition can be roughly thought of as a container image + some additional details
+// like clients, api definition etc.
 type ServiceDefinition struct {
-	// No id as there is only one definition per service slug.
+	Id string `json:"id,omitempty" binding:"required"`
 
-	ServiceSlug string     `json:"serviceSlug,omitempty" example:"user-svc" binding:"required"` // The User Svc slug of the service whose instance is being registered.
-	APISpecs    []APISpec  `json:"apiSpecs,omitempty"`                                          // API Specs such as OpenAPI definitions etc.
-	Clients     []Client   `json:"clients,omitempty"`
-	Image       *ImageSpec `json:"image,omitempty"` // Container specifications for Docker, K8s, etc.                                        // Programming language clients.
+	// Container specifications for Docker, K8s, etc.
+	Image *ImageSpec `json:"image,omitempty" binding:"required"`
+
+	// API Specs such as OpenAPI definitions etc.
+	APISpecs []APISpec `json:"apiSpecs,omitempty"`
+
+	// Programming language clients such as on npm or GitHub.
+	Clients []Client `json:"clients,omitempty"`
 }
 
 func (s ServiceDefinition) GetId() string {
-	return s.ServiceSlug
+	return s.Id
+}
+
+type ImageSpec struct {
+	// Name is the container image name/URL to use for the container
+	Name string `json:"name" example:"nginx:latest" binding:"required"`
+
+	// Port is the port number that the container will listen on internally
+	Port int `json:"port" example:"8080" binding:"required"`
 }
 
 type APISpec struct {
@@ -31,31 +45,6 @@ type APISpec struct {
 type Client struct {
 	Language Language `json:"language,omitempty" example:"JavaScript" binding:"required"`               // Programming language.
 	URL      string   `json:"url,omitempty" example:"https://example.com/client.js" binding:"required"` // The URL of the client.
-}
-
-type Image struct {
-	// Image name/URL of the container
-	Image string `json:"image" example:"nginx:latest" binding:"required"`
-
-	// Runtime environment (e.g., Docker, K8s)
-	Runtime RuntimeType `json:"runtime,omitempty"`
-
-	// Port is the port number that the container will expose
-	Port int `json:"port" example:"8080" binding:"required"`
-
-	// PersistentPaths are paths inside the container which should be persisted across container restarts
-	PersistentPaths []string `json:"persistentPaths,omitempty"`
-
-	// GPUEnabled specifies if GPU support is enabled
-	GPUEnabled bool `json:"gpuEnabled,omitempty"`
-}
-
-type ImageSpec struct {
-	// Image is the Docker image to use for the container
-	Image string `json:"image" example:"nginx:latest" binding:"required"`
-
-	// Port is the port number that the container will expose
-	Port int `json:"port" example:"8080" binding:"required"`
 }
 
 type RuntimeType string
