# server/internal/services/registry/types/service_instance_types.go
@@ -20,7 +20,7 @@ type ErrorResponse struct {
 
 type ServiceInstance struct {
 	ID            string    `json:"id,omitempty" example:"https://api.com:999/user-svc" binding:"required"` // Required: ID of the service instance
-	ServiceSlug   string    `json:"serviceSlug,omitempty" example:"user-svc" binding:"required"`            // The User Svc slug of the service whose instance is being registered.
+	DeploymentId  string    `json:"deploymentId,omitempty" example:"depl_deBUCtJirc" binding:"required"`    // The ID of the deployment that this instance is an instance of.
 	URL           string    `json:"url,omitempty" example:"https://myserver.com:5981" binding:"required"`   // Full address URL of the service instance.
 	Path          string    `json:"path,omitempty" example:"/your-svc"`                                     // Path of the service instance address. Optional (e.g., "/api")
 	NodeURL       string    `json:"nodeUrl,omitempty" example:"https://myserver.com:58231"`                 // URL of the Singulatron daemon
@@ -41,7 +41,7 @@ func (s *ServiceInstance) GetId() string {
 
 func (s *ServiceInstance) DeriveID() string {
 	if s.URL != "" {
-		return fmt.Sprintf("%s/%s", s.URL, s.ServiceSlug)
+		return fmt.Sprintf("%s/%s", s.URL, s.DeploymentId)
 	}
 
 	var constructedURL string
@@ -51,7 +51,7 @@ func (s *ServiceInstance) DeriveID() string {
 		constructedURL = fmt.Sprintf("%s://%s:%d", s.Scheme, s.IP, s.Port)
 	}
 
-	return fmt.Sprintf("%s/%s", constructedURL, s.ServiceSlug)
+	return fmt.Sprintf("%s/%s", constructedURL, s.DeploymentId)
 }
 
 var ErrNotFound = errors.New("service not found")
@@ -68,13 +68,13 @@ var ErrNotFound = errors.New("service not found")
 // Additionally, if both host and port are provided, they cannot both be specified at the same time.
 // The IP field is optional and can be used for registration by IP instead of host.
 type RegisterServiceInstanceRequest struct {
-	ServiceSlug string `json:"slug,omitempty" example:"user-svc" binding:"required"` // The User Svc slug of the service whose instance is being registered.
-	URL         string `json:"url,omitempty" example:"https://myserver.com:5981"`    // Full address URL of the service instance.
-	Scheme      string `json:"scheme,omitempty" example:"https"`                     // Scheme of the service instance address. Required if URL is not provided.
-	Host        string `json:"host,omitempty" example:"myserver.com"`                // Host of the service instance address. Required if URL is not provided
-	IP          string `json:"ip,omitempty" example:"8.8.8.8"`                       // IP of the service instance address. Optional: to register by IP instead of host
-	Port        int    `json:"port,omitempty" example:"8080"`                        // Port of the service instance address. Required if URL is not provided
-	Path        string `json:"path,omitempty" example:"/your-svc"`                   // Path of the service instance address. Optional (e.g., "/api")
+	ServiceDefinitionId string `json:"serviceDefinitionId,omitempty" example:"user-svc" binding:"required"` // The service definition id.
+	URL                 string `json:"url,omitempty" example:"https://myserver.com:5981"`                   // Full address URL of the service instance.
+	Scheme              string `json:"scheme,omitempty" example:"https"`                                    // Scheme of the service instance address. Required if URL is not provided.
+	Host                string `json:"host,omitempty" example:"myserver.com"`                               // Host of the service instance address. Required if URL is not provided
+	IP                  string `json:"ip,omitempty" example:"8.8.8.8"`                                      // IP of the service instance address. Optional: to register by IP instead of host
+	Port                int    `json:"port,omitempty" example:"8080"`                                       // Port of the service instance address. Required if URL is not provided
+	Path                string `json:"path,omitempty" example:"/your-svc"`                                  // Path of the service instance address. Optional (e.g., "/api")
 }
 
 type RegisterServiceInstanceResponse struct {
